[gd_scene load_steps=20 format=3 uid="uid://de7jdm6b6jkob"]

[ext_resource type="PackedScene" uid="uid://b23qiygihwv2h" path="res://scenes/cooking/activities/Old/CookingBase.tscn" id="1_3sw0t"]
[ext_resource type="Script" uid="uid://drsnt03dw2vdu" path="res://scripts/cooking/ChoppingActivity.gd" id="2_ojnvx"]
[ext_resource type="Texture2D" uid="uid://chmpi1n4p1apn" path="res://assets/textures/kenney_ui-pack-pixel-adventure/Tiles/Large tiles/Thick outline/tile_0032.png" id="2_pk5pp"]
[ext_resource type="Texture2D" uid="uid://c28jljdwevpa5" path="res://assets/textures/workstation_textures/ChoppingZone_Texture.png" id="3_bjcle"]
[ext_resource type="Texture2D" uid="uid://cbg7dcha6kjh8" path="res://assets/workstations/chopping_game/cutting board only.png" id="4_yn4oy"]
[ext_resource type="AudioStream" uid="uid://b2acn5b5gib7i" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut1.wav" id="5_bhn3j"]
[ext_resource type="FontFile" uid="uid://iqracr2sqomh" path="res://assets/fonts/Jaro-Regular-VariableFont_opsz.ttf" id="5_ihd3f"]
[ext_resource type="AudioStream" uid="uid://vcg221bt5aiw" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut2.wav" id="6_8bat3"]
[ext_resource type="AudioStream" uid="uid://c58ters8lxu0g" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut3.wav" id="7_3fpex"]
[ext_resource type="Texture2D" uid="uid://bthdxl8mhhfga" path="res://assets/workstations/chopping_game/knife_top_down.png" id="7_be1gm"]
[ext_resource type="AudioStream" uid="uid://251aww0a3858" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut4.wav" id="8_vhigo"]
[ext_resource type="AudioStream" uid="uid://dhqafchw70kua" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut5.wav" id="9_4hnjx"]
[ext_resource type="AudioStream" uid="uid://dxotqhdiila3a" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut6.wav" id="10_17sga"]
[ext_resource type="AudioStream" uid="uid://ddy086m470tx7" path="res://assets/sfx/team rocket sfx/kitchen minigames sfx 1/cut7.wav" id="11_cdwm0"]
[ext_resource type="Texture2D" uid="uid://baecuvxkgnpcq" path="res://assets/food/salt.png" id="12_ihp6r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp0tf"]
texture = ExtResource("2_pk5pp")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 24.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqpiy"]
bg_color = Color(1, 0.638184, 0.276091, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v5067"]
font = ExtResource("5_ihd3f")
font_size = 48
outline_size = 12
outline_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7m32a"]
streams_count = 7
stream_0/stream = ExtResource("5_bhn3j")
stream_1/stream = ExtResource("6_8bat3")
stream_2/stream = ExtResource("7_3fpex")
stream_3/stream = ExtResource("8_vhigo")
stream_4/stream = ExtResource("9_4hnjx")
stream_5/stream = ExtResource("10_17sga")
stream_6/stream = ExtResource("11_cdwm0")

[node name="CookingScene" instance=ExtResource("1_3sw0t")]

[node name="ColorRect" parent="Control/CenterContainer" index="0"]
color = Color(1, 0.776471, 0.537255, 1)

[node name="PanelContainer" type="PanelContainer" parent="Control/CenterContainer/ColorRect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vp0tf")

[node name="Activity" parent="." index="4"]
script = ExtResource("2_ojnvx")

[node name="TextureRect" type="TextureRect" parent="Activity" index="0"]
layout_mode = 0
offset_left = 484.0
offset_top = 250.0
offset_right = 812.0
offset_bottom = 457.0
texture = ExtResource("4_yn4oy")

[node name="OldProgressBar" type="ProgressBar" parent="Activity" index="1"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 113.0
offset_right = 200.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="ScoreBar" type="ProgressBar" parent="Activity" index="2"]
layout_mode = 0
offset_left = 362.0
offset_top = 132.0
offset_right = 934.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_ihd3f")
theme_override_styles/fill = SubResource("StyleBoxFlat_pqpiy")

[node name="PanelContainer" type="PanelContainer" parent="Activity" index="3"]
layout_mode = 0
offset_left = 491.0
offset_top = 456.0
offset_right = 806.0
offset_bottom = 504.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vp0tf")

[node name="ScoreLabel" type="Label" parent="Activity" index="4"]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 137.0
offset_right = 360.0
offset_bottom = 160.0
text = "Progress: 0%"

[node name="ResultLabel" type="Label" parent="Activity" index="5"]
layout_mode = 0
offset_left = 566.0
offset_top = 169.0
offset_right = 720.0
offset_bottom = 229.0
text = "Perfect!"
label_settings = SubResource("LabelSettings_v5067")
horizontal_alignment = 1

[node name="SFX_ChopRandomiser" type="AudioStreamPlayer2D" parent="Activity" index="6"]
stream = SubResource("AudioStreamRandomizer_7m32a")

[node name="IngredientImageDisplay" type="TextureRect" parent="Activity" index="7"]
layout_mode = 0
offset_left = 550.0
offset_top = 233.0
offset_right = 850.0
offset_bottom = 533.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("12_ihp6r")

[node name="ChoppingTrack" type="Sprite2D" parent="Activity" index="8"]
position = Vector2(648.5, 480.125)
scale = Vector2(0.977419, 0.580769)
texture = ExtResource("3_bjcle")

[node name="Boundary" type="TextureRect" parent="Activity" index="9"]
layout_mode = 0
offset_left = 491.0
offset_top = 250.0
offset_right = 806.0
offset_bottom = 504.0

[node name="Marker" type="TextureRect" parent="Activity/Boundary" index="0"]
z_index = 1
layout_mode = 0
offset_left = 132.0
offset_top = -3.0
offset_right = 180.0
offset_bottom = 495.0
scale = Vector2(0.85, 0.85)
texture = ExtResource("7_be1gm")
